--- a/ansible/roles/services/templates/nginx/sites-available/default-ssl.j2
+++ b/ansible/roles/services/templates/nginx/sites-available/default-ssl.j2
@@ -1,28 +1,17 @@
-# setup nginx with apache/varnish as reverse proxy
+# nginx ssl/http2 with apache/varnish as reverse proxy
 
 server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    
-    #server_name localhost {{ default_domainname }};
-    #server_name $http_host;
-    
-    # see: https://nginx.org/en/docs/http/server_names.html
-    #server_name   ~^(www\.)?(.+)$;
-    #server_name $hostname;
-    server_name _;
-    
+
+    server_name _;  # catch all, see: https://nginx.org/en/docs/http/server_names.html
+
     ssl_certificate /etc/ssl/minica/cert.pem;
     ssl_certificate_key /etc/ssl/minica/key.pem;
 
-    ssl_protocols TLSv1.2;
+    ssl_protocols TLSv1.3;
 
-    #location / {
-    #    #root   /sites/$2;
-    #    root    /var/www/vhosts/$2/htdocs;
-    #}
-    
     root {{ htdocs_path }};    # is this needed?
     index index.php index.html index.htm;
 
@@ -47,46 +36,11 @@ server {
         root {{ errordocs_path }};
     }
 
-    ## Only allow GET, HEAD and POST request methods
-    #if ($request_method !~ ^(GET|HEAD|POST)$ ) {
-    #    return 444;
-    #}
-
-    # Deny illegal Host headers
-    #if ($host !~* ^(domain.tld|www.domain.tld)$ ) { 
-    #    return 444;
-    #}
-
-    # Deny certain User-Agents (case insensitive)
-    # The ~* makes it case insensitive as opposed to just a ~
-    #if ($http_user_agent ~* (Baiduspider|Sosospider|panscient|Jullo|w00t|Morfeus|Toata) ) { 
-	  #	return 444;
-    #}
-
-    # Deny certain Referers (case insensitive)
-    # The ~* makes it case insensitive as opposed to just a ~
-    #if ($http_referer ~* (babes|click|diamond|forsale|girl|jewelry|love|nudit|organic|poker|porn|poweroversoftware|sex|teen|video|webcam|zippo) ) { 
-	  #	return 444;
-    #}
-    
-	  # include php manual - DISABLE FOR PRODUCTION!
+	# include php manual - DISABLE FOR PRODUCTION!
     location /manual {
 		# note this is a special path pointing to localhost not vhosts!
     	alias /var/www/localhost/htdocs/manual/php-chunked-xhtml;
-	  }
-
-    # Only allow these file types to document root
-    #location / {
-    #       if ($request_uri ~* (^\/|\.html|\.jpg|\.pl|\.png|\.css|\.ico|robots\.txt)$ ) {
-    #               break;
-    #       }
-    #       return 444;
-    #}
-
-    # Redirect from non-www to www
-    #if ($host !~* "^www\.") {
-    #       rewrite  ^/(.*)$  http://www.domain.tld/$1  permanent;
-    #}
+	}
 
     # System Maintenance (Service Unavailable)
     error_page 503 @503;
@@ -94,56 +48,45 @@ server {
 		root {{ errordocs_path }};
 		rewrite  ^(.*)$  /maintenance.html break;
     }
-    # Rewrite all the requests to the maintenance.html page if it exists.
+    # rewrite all the requests to the maintenance.html page if it exists.
     if (-f $document_root/.maintenance) {
     	return 503;
     }
-    
+
     # deny access to ".ht*" files (.htpasswd, .htaccess, ...) 
     location ~ /\.ht {
-    	deny all;
-	  }
-    
-	  # Serve an empty 1x1 gif
+		deny all;
+	}
+
+	# Serve an empty 1x1 gif
     location = /images/empty.gif {
     	empty_gif;
 	}
-	
-	# FIXME ignore if not present, otherwise serve happily
+
 	# silent drop missing favicon requests
 	location = /favicon.ico {
 		access_log off;
 		log_not_found off;
 	}
 
-    # get static content directly
-    # see: http://forum.ispsystem.com/en/showthread.php?p=3392
+    # serve static content directly
     location ~* ^.+\.(ico|jpe?g|gif|png|mp3|ogg|midi|wav|mpe?g|avi|tar|7z|zip|gz|bz2?|rar|svg|js|css|woff|woff2)$ {
-		    # Stop Image and Document Hijacking
-       	#if ($http_referer !~ ^(http://domain.tld|http://www.domain.tld) ) {
-        #	return 444;
-		    #}
-        root {{ htdocs_path }};
+		root {{ htdocs_path }};
         expires		max;
         add_header	Cache-Control public;
 	}
 
-    # we want everything being processed by reverse-proxy: apache or varnish, TODO add browser-sync?
+    # we want everything being processed by reverse-proxy (Apache or Varnish)
+	# TODO add browser-sync?
     location / {
         try_files $uri $uri/ /index.php;
-    #    proxy_set_header X-Real-IP  $remote_addr;
-    #    proxy_set_header X-Forwarded-For $remote_addr;
-    #    proxy_set_header Host $host;
-    #    #proxy_pass http://127.0.0.1:8080; # forward to apache
-    #    proxy_pass http://127.0.0.1:6080;  # forward to varnish
     }
-
     location ~ \.php$ {
         proxy_set_header X-Real-IP  $remote_addr;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header Host $host;
-        proxy_pass http://127.0.0.1:8080;  # forward to apache
-        #proxy_pass http://127.0.0.1:6080;   # forward to varnish
+        proxy_pass http://127.0.0.1:8080;   # forward to apache
+        #proxy_pass http://127.0.0.1:6080;  # forward to varnish
     }
 
 }
