--- a/ansible/roles/services/templates/couchdb-import-export/bin/couch-dump-databases.j2
+++ b/ansible/roles/services/templates/couchdb-import-export/bin/couch-dump-databases.j2
@@ -1,9 +1,10 @@
 #!/bin/bash -e
+# vim: ts=4 sw=4 et
 # export all user databases from CouchDB as *.jsonl files to given folder
 
 command -v couchexport >/dev/null 2>&1 || { echo "Command 'couchexport' required but it's not installed.  Aborting." >&2; exit 1; }
 
-COUCH_URL_SCHEME="{{ couchdb_url_scheme }}"      
+COUCH_URL_SCHEME="{{ couchdb_url_scheme }}"
 COUCH_URL_HOST="{{ couchdb_url_host }}"
 COUCH_URL_PORT="{{ couchdb_url_port }}"
 EXPORT_FOLDER="{{ couchdb_export_dir }}"
