--- a/ansible/roles/services/templates/couchdb-import-export/bin/couch-init.j2
+++ b/ansible/roles/services/templates/couchdb-import-export/bin/couch-init.j2
@@ -1,4 +1,5 @@
 #!/bin/bash -x
+# vim: ts=4 sw=4 et
 # init a new couchdb instance
 
 # start couchdb
@@ -7,7 +8,7 @@
 # let it settle, sleep a while
 sleep 10
 
-COUCH_URL_SCHEME="{{ couchdb_url_scheme }}"      
+COUCH_URL_SCHEME="{{ couchdb_url_scheme }}"
 COUCH_URL_HOST="{{ couchdb_url_host }}"
 COUCH_URL_PORT="{{ couchdb_url_port }}"
 COUCH_USER="{{ couchdb_admin_user }}"
