--- a/ansible/roles/services/templates/dashboard/index.php.j2
+++ b/ansible/roles/services/templates/dashboard/index.php.j2
@@ -63,15 +63,18 @@
     <header>
         <nav>
           <ul>
-            <li><a href="#">Nav1</a></li>
-            <li><a href="#">Nav2</a></li>
-            <li><a href="#">Nav3</a></li>
-            <li><a href="#">Nav4</a></li>
-            <li><a href="#">Nav5</a></li>
-            <li><a href="#">Nav6</a></li>
-            <li><a href="#">Nav7</a></li>
-            <li><a href="#">Nav8</a></li>
-            <li><a href="#">Nav9</a></li>
+            <li><a href="#">Configuration</a></li>
+            <li><a href="#">Files</a></li>
+            <li><a href="#">Editor</a></li>
+            <li><a href="#">MySQL</a></li>
+            <li><a href="#">PostgreSQL</a></li>
+            <li><a href="#">CouchDB</a></li>
+            <li><a href="#">RabbitMQ</a></li>
+            <li><a href="#">Solr</a></li>
+            <li><a href="#">Redis</a></li>
+            <li><a href="#">Mailcatcher</a></li>
+            <li><a href="#">DNSmasq</a></li>
+            <li><a href="#">Shell</a></li>
           </ul>
         </nav>
     </header>
@@ -79,7 +82,7 @@
         <div>CONTENT</div>
     </main>
     <footer>
-        <div><p>Box version { box_version }, Dashboard running on PHP <?php echo phpversion(); ?><br><small><?php echo str_replace("\n","<br>","{{ lookup('pipe','cat /home/vagrant/.release_webdev') }}"); ?></small></p></div>
+        <div><p>Box version { box_version }, Dashboard running on PHP <?php echo phpversion(); ?><!-- <br><small><?php echo str_replace("\n","<br>","{{ lookup('pipe','cat /home/vagrant/.release_webdev') }}"); ?></small> --></p></div>
     </footer>
 </body>
 </html>
